- added APIs to the script loader class to compile a script without the
  overhead related to loading the script.  This is useful when a script is
  going to be run in the environment of another script.
- improved tracking of source file information for blocks of code.  error
  messages and closure string representations will now accurately represent
  the code's origin information.

2.1-beta 11  (3 Dec 06)
===========
- multi-line parsed literals now make a more sincere effort to track which 
  line number a variable was encountered at.
- fixed a bug with multi-line parsed literals where a variable followed 
  immediately by a tab or newline was not being "terminated"
- fixed a bug with && and & followed by a HOES expression being mistaken 
  for a function reference token.
- added &unlambda function that works exactly like &lambda except it does
  not create a new closure (rather it manipulates the this scope of the
  passed in closure and returns the passed in closure).
- added a profiler to sleep...  I know, you should be scared.  Use the
  DEBUG_TRACE_CALLS (8) or DEBUG_TRACE_PROFILE_ONLY (24) debug options to
  enable it.  Profiler statistics are available in the ScriptInstance class
  with the getProfilerStatistics method.  Scripts can access their profiler
  statistics with the &profile() function which returns an array.  
- fixed a line number skew issue with multi-line tokens passed as parameters
  to a function/expression.  
- fixed a line number skew issue when approximating the line numbers where
  a closure originated.
- added a -a/--ast command line option to dump the abstract syntax tree
  for the specified script.  
- fixed a coroutine bug where consecutive yields happening within a nested
  block were not properly saving the nested context.

2.1-beta 10 (20 Nov 06)
===========
- added sizeof("data format") to return the size (in bytes) of the
  data structure represented by the specified format string. 