@@ -1,0 +1,11 @@
+debug(15);
+
+println("Testing yo");
+println("Blargh");
+
+sub foof
+{
+   include("accum.sl");
+} 
+
+foof();
