@@ -1,3 +1,3 @@
 Trace: &check('within fork') at forker.sl:9
-Trace: &fork(&closure[forker.sl:9]#2) = sleep.bridges.io.IOObject@1551b0 at forker.sl:8
+Trace: &fork(&closure[forker.sl:9]#2) = sleep.bridges.io.IOObject@e67e6a at forker.sl:8
 Trace: &check('outside of fork') at forker.sl:12
